[package]
edition = "2021"
name = "kaarissou"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.57"
songbird = { version = "0.3.0", features = ["driver-core"]}
poise = "0.3.0"
thiserror = "1.0.32"

[dependencies.tokio]
features = ["fs", "rt", "macros", "rt-multi-thread", "sync", "process"]
version = "1.20"