[package]
edition = "2021"
name = "kaarissou"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
hound = "3.4.0"
poise = "0.3.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
songbird = {version = "0.3.0", features = ["driver-core"]}
thiserror = "1.0.32"
tokio-stream = {version = "0.1.9", features = ["fs"]}
toml = "0.5"
tokio-timer = "0.2.13"
reqwest = "0.11.14"
http-cache-reqwest = "0.6.0"
reqwest-middleware = "0.2.0"
once_cell = "1.17.0"
serde_json = "1.0.93"

[dependencies.tokio]
features = ["fs", "rt", "macros", "rt-multi-thread", "sync", "process"]
version = "1.20.1"
